# zhishiku

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: query.py  router.py  upload.py
app/core/: __init__.py  exceptions.py  logging.py
app/schemas/: common.py  query.py  upload.py
app/services/: document_service.py  rag_service.py
app/utils/: file_utils.py
docs/: DEVELOPMENT_STANDARDS.md  PRD.md  PROJECT_ANALYSIS.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: index.ts
frontend/src/components/: ChatWindow.tsx  QuestionInput.tsx  TextInputPanel.tsx
frontend/src/components/ui/: Button.tsx  Loading.tsx  Toast.tsx
frontend/src/lib/: utils.ts
frontend/src/store/: useStore.ts
frontend/src/types/: index.ts
tests/: test_api.py
