[project]
name = "knowledge-base-qa"
version = "1.0.0"
description = "知识库问答系统"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.18",
    "langchain==0.3.14",
    "langchain-openai==0.3.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "python-dotenv==1.0.1",
    "loguru==0.7.3",
    "chardet==5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "httpx==0.28.1",
    "black==24.10.0",
    "ruff==0.9.0",
]
